--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             if (window.DeviceOrientationEvent) {
                 window.addEventListener('deviceorientation', function(event) {
                     document.getElementById('doeSupported').innerHTML = "EVENT!"
-                    //console.log(event.alpha + ' : ' + event.beta + ' : ' + event.gamma);
+                    console.log(event);
                 });
                 //document.getElementById('doeSupported').innerHTML = "SUPPORTED!";
             } else {
