--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             if (window.DeviceOrientationEvent) {
                 window.addEventListener('deviceorientation', function(event) {
-                    document.getElementById('doeSupported').innerHTML = "EVENT!"
+                    document.getElementById('doeSupported').innerHTML = "EVENT!";
                     console.log(event);
                 });
                 //document.getElementById('doeSupported').innerHTML = "SUPPORTED!";
