--- a/ar.html
+++ b/ar.html
@@ -2,10 +2,15 @@
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!-- define your gltf asset -->
+<a-assets>
+    <a-asset-item id="engine" src="/engine.gltf"></a-asset-item>
+</a-assets>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-entity gltf-model="##engine"></a-entity>
+    <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
