--- a/ar.html
+++ b/ar.html
@@ -4,7 +4,7 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <!-- define your gltf asset -->
 <a-assets>
-    <a-asset-item id="engine" src="/engine.gltf"></a-asset-item>
+    <a-asset-item id="engine" src="jarbton.github.io/engine.gltf"></a-asset-item>
 </a-assets>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
