--- a/ar.html
+++ b/ar.html
@@ -5,7 +5,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <!-- define your gltf asset -->
     <a-assets>
-        <a-asset-item id="engine" src="jarbton.github.io/engine.gltf"></a-asset-item>
+        <a-asset-item id="engine" src="/engine.gltf"></a-asset-item>
     </a-assets>
     <a-scene embedded arjs>
         <!-- create your content here. just a box for now -->
