--- a/ar.html
+++ b/ar.html
@@ -6,7 +6,7 @@
     <a-scene embedded arjs>
         <!-- define your gltf asset -->
         <a-assets>
-            <a-asset-item id="engine" src="/engine.gltf"></a-asset-item>
+            <a-asset-item id="engine" src="assets/engine.gltf"></a-asset-item>
         </a-assets>
         <!-- create your content here. just a box for now -->
         <a-entity gltf-model="engine"></a-entity>
