--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,7 @@
             <a-asset-item id="engine" src="/assets/engine.gltf"></a-asset-item>
         </a-assets>
         <!-- create your content here. just a box for now -->
-        <a-entity gltf-model="engine"></a-entity>
+        <a-entity gltf-model="/assets/engine.gltf"></a-entity>
         <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
         <!-- define a camera which will move according to the marker position -->
         <a-marker-camera preset='hiro'></a-marker-camera>
