--- a/ar.html
+++ b/ar.html
@@ -4,13 +4,8 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
-        <!-- define your gltf asset -->
-        <a-assets>
-            <a-asset-item id="engine" src="/assets/engine.gltf"></a-asset-item>
-        </a-assets>
         <!-- create your content here. just a box for now -->
-        <a-entity gltf-model="engine"></a-entity>
-        <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
+        <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
         <!-- define a camera which will move according to the marker position -->
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
