--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           </div>
         </div>
       </div>
-      <!-- <div class="navbar navbar-dark bg-dark box-shadow">
+      <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+          <!-- <a href="#" class="navbar-brand d-flex align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
             <strong>Album</strong>
-          </a>
+          </a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-      </div> -->
+      </div>
     </header>
 
     <main role="main">
@@ -59,7 +59,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <img class="card-img-top" data-src="/assets/images/ar.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a cube on the Hiro pattern marker.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <img class="card-img-top" data-src="/assets/images/tom.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Tom's test project for sensor testing.</p>
                   <div class="d-flex justify-content-between align-items-center">
