--- a/tomtest.html
+++ b/tomtest.html
@@ -14,11 +14,14 @@
         <title>Jarbton</title>
     </head>
     <body>
+        
         <iframe width="600" height="400" allowfullscreen style="border-style:none;" src="https://cdn.pannellum.org/2.5/pannellum.htm#panorama=https://pannellum.org/images/alma.jpg"></iframe>
-        pannellum.viewer('panorama', {
-            "type": "equirectangular",
-            "panorama": "https://pannellum.org/images/alma.jpg"
-        });
-</script>
+        
+        <script>
+            //pannellum.viewer('panorama', {
+            //    "type": "equirectangular",
+            //    "panorama": "https://pannellum.org/images/alma.jpg"
+            //});
+        </script>
     </body>
 </html>
