--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src=".../assets/images/ar.jpg" alt="Card image cap">
+                <img class="card-img-top" data-src="assets/images/ar.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a cube on the Hiro pattern marker.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src=".../assets/images/tom.jpg" alt="Card image cap">
+                <img class="card-img-top" data-src="assets/images/tom.jpg" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Tom's test project for sensor testing.</p>
                   <div class="d-flex justify-content-between align-items-center">
