--- a/tomtest.html
+++ b/tomtest.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
     <style>
     #panorama {
-        width: 600px;
-        height: 400px;
+        width: 100%;
+        height: 100%;
     }
     </style>
 </head>
@@ -19,7 +19,8 @@
 <script>
 pannellum.viewer('panorama', {
     "type": "equirectangular",
-    "panorama": "https://pannellum.org/images/alma.jpg"
+    "panorama": "https://pannellum.org/images/alma.jpg",
+    "orientationOnByDefault": true
 });
 </script>
 
