--- a/tomtest.html
+++ b/tomtest.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
     <style>
-    #panorama {
-        width: 100%;
-        height: 100%;
-    }
+        body {
+            margin: 0
+        }
+        #panorama {
+            width: 100vw;
+            height: 100vh;
+        }
     </style>
 </head>
 <body>
