--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <!-- <a href="#" class="navbar-brand d-flex align-items-center">
+          <a href="#" class="navbar-brand d-flex align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
-            <strong>Album</strong>
-          </a> -->
+            <strong>Projects</strong>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -59,9 +59,9 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="assets/images/ar.jpg" alt="Card image cap">
+                <img class="card-img-top" data-src="https://miro.medium.com/max/2560/1*0vxGN3gJ0ORpCgCcLNqOQg.png" alt="Augmented Reality Image">
                 <div class="card-body">
-                  <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a cube on the Hiro pattern marker.</p>
+                  <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a 3D model (in this case a cube) on the Hiro pattern marker.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href='ar.html' class="btn btn-sm btn-outline-secondary" role="button">View</a>
@@ -73,9 +73,9 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="assets/images/tom.jpg" alt="Card image cap">
+                <img class="card-img-top" data-src="https://medias.fcacanada.ca//specs/fiat/500/year-2019/media/images/whybuys/2019-fiat-500-whybuy-black-red-stripes-parked-desert-hill_8bc40d000c32bc58e99707227f982853-839x310.jpg" alt="Panorama Image">
                 <div class="card-body">
-                  <p class="card-text">Tom's test project for sensor testing.</p>
+                  <p class="card-text">Pannellum test page. Uses pannellum to let the user view panoramas.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href='tomtest.html' class="btn btn-sm btn-outline-secondary" role="button">View</a>
@@ -90,15 +90,6 @@
       </div>
 
     </main>
-
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>This is an example page edited by Jarbton from a Bootstrap templace.</p>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
