--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="https://miro.medium.com/max/2560/1*0vxGN3gJ0ORpCgCcLNqOQg.png" alt="Augmented Reality Image">
+                <img class="card-img-top" src="https://miro.medium.com/max/2560/1*0vxGN3gJ0ORpCgCcLNqOQg.png" alt="Augmented Reality Image">
                 <div class="card-body">
                   <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a 3D model (in this case a cube) on the Hiro pattern marker.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="https://medias.fcacanada.ca//specs/fiat/500/year-2019/media/images/whybuys/2019-fiat-500-whybuy-black-red-stripes-parked-desert-hill_8bc40d000c32bc58e99707227f982853-839x310.jpg" alt="Panorama Image">
+                <img class="card-img-top" src="https://medias.fcacanada.ca//specs/fiat/500/year-2019/media/images/whybuys/2019-fiat-500-whybuy-black-red-stripes-parked-desert-hill_8bc40d000c32bc58e99707227f982853-839x310.jpg" alt="Panorama Image">
                 <div class="card-body">
                   <p class="card-text">Pannellum test page. Uses pannellum to let the user view panoramas.</p>
                   <div class="d-flex justify-content-between align-items-center">
