--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <p class="card-text">LitLink. A test page to shorten URLs. Built in Django.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href='thttp://litlink.herokuapp.com/' class="btn btn-sm btn-outline-secondary" role="button">View</a>
+                        <a href='http://litlink.herokuapp.com/' class="btn btn-sm btn-outline-secondary" role="button">View</a>
                       </div>
                       <small class="text-muted">Jacob</small>
                     </div>
