--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">Made by Jacob Barton.</p>
+              <p class="text-muted">Index made by Jacob Barton. Project authors named on cards.</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
@@ -48,8 +48,8 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Jarbton's Projects</h1>
-          <p class="lead text-muted">Some tests projects that do some stuff. :)</p>
+          <h1 class="jumbotron-heading">Projects</h1>
+          <p class="lead text-muted">Some tests projects that do some stuff. Authors in the bottom right. :)</p>
         </div>
       </section>
 
