--- a/ar.html
+++ b/ar.html
@@ -4,9 +4,17 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
-        <!-- create your content here. just a box for now -->
-        <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-        <!-- define a camera which will move according to the marker position -->
-        <a-marker-camera preset='hiro'></a-marker-camera>
+        <!-- Hiro marker with green box -->
+        <a-marker preset='hiro'>
+            <a-box position='0 0.5 0' material='color: green;'></a-box>
+        </a-marker>
+
+        <!-- Kanji marker with opaque box -->
+        <a-marker preset='kanji'>
+            a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+        </a-marker>
+
+        <!-- Add camera -->
+        <a-entity camera></a-entity>>
     </a-scene>
 </body>
