--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
 
         <!-- Kanji marker with opaque box -->
         <a-marker preset='kanji'>
-            a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+            <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
         </a-marker>
 
         <!-- Add camera -->
