--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://medias.fcacanada.ca//specs/fiat/500/year-2019/media/images/whybuys/2019-fiat-500-whybuy-black-red-stripes-parked-desert-hill_8bc40d000c32bc58e99707227f982853-839x310.jpg" alt="Panorama Image">
+                <img class="card-img-top" src="https://user-images.githubusercontent.com/31927652/30601800-21f6d50a-9d63-11e7-899a-e9017e491bc9.png" alt="Panorama Image">
                 <div class="card-body">
                   <p class="card-text">Pannellum test page. Uses pannellum to let the user view panoramas.</p>
                   <div class="d-flex justify-content-between align-items-center">
