--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
 
         <!-- Kanji marker with opaque box -->
         <a-marker preset='kanji'>
-            <a-entity gltf-model-next="src: url(/assets/models/engine.gltf);"></a-entity>
+            <a-entity gltf-model-next="src: url(/assets/models/engine.gltf);" scale="0.2 0.2 0.2"></a-entity>
         </a-marker>
 
         <!-- Add camera -->
