--- a/ar.html
+++ b/ar.html
@@ -5,7 +5,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
         <a-assets>
-            <a-asset-item id="engine" src="/assets/models/engine.gltf"></a-asset-item>
+            <a-asset-item id="engine" src="/assets/models/engine/2CylinderEngine.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Hiro marker with green box -->
