Location and Scale Changes

--- a/ar.html
+++ b/ar.html
@@ -11,12 +11,12 @@
 
         <!-- Hiro marker with green box -->
         <a-marker preset='hiro'>
-            <a-gltf-model src="#gearbox" scale='0.01 0.01 0.01'></a-gltf-model>
+            <a-gltf-model src="#gearbox" position='0 0.5 0' scale='0.1 0.1 0.1'></a-gltf-model>
         </a-marker>
 
         <!-- Kanji marker with opaque box -->
         <a-marker preset='kanji'>
-            <a-gltf-model src="#engine" scale='0.01 0.01 0.01'></a-gltf-model>
+            <a-gltf-model src="#engine" position='0 0.5 0' scale='0.01 0.01 0.01'></a-gltf-model>
         </a-marker>
 
         <!-- Add camera -->
