--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
 
         <!-- Hiro marker with green box -->
         <a-marker preset='hiro'>
-            <a-gltf-model src="#gearbox" position='0 0.5 0' scale='0.1 0.1 0.1'></a-gltf-model>
+            <a-gltf-model src="#gearbox" position='0 0.5 0'></a-gltf-model>
         </a-marker>
 
         <!-- Kanji marker with opaque box -->
