--- a/ar.html
+++ b/ar.html
@@ -6,12 +6,12 @@
     <a-scene embedded arjs>
         <a-assets>
             <a-asset-item id="engine" src="/assets/models/engine/2CylinderEngine.gltf"></a-asset-item>
-            <a-asset-item id="gearbox" src="/assets/models/gearbox/GearboxAssy.gltf"></a-asset-item>
+            <a-asset-item id="duck" src="/assets/models/duck/duck.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Hiro marker with green box -->
         <a-marker preset='hiro'>
-            <a-gltf-model src="#gearbox" position='0 0.5 0'></a-gltf-model>
+            <a-gltf-model src="#duck" position='0 0.5 0'></a-gltf-model>
         </a-marker>
 
         <!-- Kanji marker with opaque box -->
