--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
                 <li><a href="https://twitter.com/jarbton" class="text-white">Follow on Twitter</a></li>
+                <li><a href="https://github.com/Jarbton" class="text-white">GitHub</a></li>
               </ul>
             </div>
           </div>
@@ -34,8 +35,7 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
-            <strong>Projects</strong>
+            <strong>Jarbton</strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,9 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://miro.medium.com/max/2560/1*0vxGN3gJ0ORpCgCcLNqOQg.png" alt="Augmented Reality Image">
                 <div class="card-body">
-                  <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show a 3D model (in this case a cube) on the Hiro pattern marker.</p>
+                  <p class="card-text">Augmented reality test page. Uses A-Frame and AR.js to show 3D models on pattern markers.</p>
+                  <a href="https://stemkoski.github.io/AR-Examples/markers/hiro.png" class="card-link">Hiro.png</a>
+                  <a href="https://stemkoski.github.io/AR-Examples/markers/kanji.png" class="card-link">Kanji.png</a>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href='ar.html' class="btn btn-sm btn-outline-secondary" role="button">View</a>
